[package]
name = "fn_chain"
version = "0.1.0"
authors = ["Nattapong Sirilappanich <s.nattapong@gmail.com>"]
edition = "2018"
description = "Helper macro/function to create function chaining"
repository = "https://github.com/NattapongSiri/fn_chain"
license-file = "LICENSE"
keywords = ["helper", "chain", "functions", "chaining", "pattern"]
categories = ["development-tools", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
